--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -13,6 +13,7 @@
     "\n",
     "Some portions of this notebook adapted from:\n",
     " * [Middlebury Flow code by Johannes Oswald](https://github.com/Johswald/flow-code-python/blob/master/readFlowFile.py)\n",
+    " * [DeepDeform Demo Code](https://github.com/AljazBozic/DeepDeform)\n",
     " * [OpenCV Samples](https://github.com/opencv/opencv/blob/master/samples/python/opt_flow.py)"
    ]
   },
@@ -22,7 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# parameters"
+    "# parameters\n",
+    "SHOW_DEMO_OUTPUT = True"
    ]
   },
   {
@@ -47,7 +49,7 @@
     "\n",
     "@attr.s(slots=True, eq=False, weakref_slot=False)\n",
     "class OpticalFlowPair(object):\n",
-    "    \"\"\"A pair of images with an optical flow field\"\"\"\n",
+    "    \"\"\"A flyweight for a pair of images with an optical flow field\"\"\"\n",
     "    \n",
     "    dataset = attr.ib(type=str, default='')\n",
     "    \"\"\"To which dataset does this pair belong?\"\"\"\n",
@@ -65,12 +67,13 @@
     "    \"\"\"URI or numpy array for the second image (target image)\"\"\"\n",
     "    \n",
     "    flow = attr.ib(default=None)\n",
-    "    \"\"\"Numpy array representing optical flow from img1 -> img2\"\"\"\n",
+    "    \"\"\"A callable or numpy array representing optical flow from img1 -> img2\"\"\"\n",
     "    \n",
     "    def to_html(self):\n",
     "        im1 = load_image(self.img1)\n",
     "        im2 = load_image(self.img2)\n",
-    "        fviz = draw_flow(im1, self.flow)\n",
+    "        flow = self.flow if isinstance(self.flow, (np.ndarray, np.generic)) else self.flow()\n",
+    "        fviz = draw_flow(im1, flow)\n",
     "        html = \"\"\"\n",
     "            <table>\n",
     "            \n",
@@ -103,10 +106,12 @@
     "    display(HTML(x))\n",
     "    \n",
     "def load_image(x):\n",
+    "    if isinstance(x, (np.ndarray, np.generic)):\n",
+    "        return x\n",
     "    if isinstance(x, six.string_types):\n",
     "        return imageio.imread(x)\n",
     "    else:\n",
-    "        return x\n",
+    "        raise ValueError(\"Can't handle %s\" % (x,))\n",
     "\n",
     "img_to_data_uri = lambda x: op_plt.img_to_data_uri(x, format='png')\n",
     "# # TODO correct oarphpy img uri to be png or jpeg   data_url = 'data:image/png;base64,{}'.format(parse.quote(data)) \n",
@@ -222,27 +227,133 @@
     "    p = OpticalFlowPair(\n",
     "            dataset=\"Middlebury Optical Flow\",\n",
     "            id1=scene['input'],\n",
-    "            img1=os.path.join(MIDD_DATA_ROOT, scene['input']),\n",
+    "            img1='file://' + os.path.join(MIDD_DATA_ROOT, scene['input']),\n",
     "            id2=scene['expected_out'],\n",
-    "            img2=os.path.join(MIDD_DATA_ROOT, scene['expected_out']),\n",
-    "            flow=midd_read_flow(os.path.join(MIDD_DATA_ROOT, scene['flow_gt'])))\n",
+    "            img2='file://' + os.path.join(MIDD_DATA_ROOT, scene['expected_out']),\n",
+    "            flow=lambda: midd_read_flow(os.path.join(MIDD_DATA_ROOT, scene['flow_gt'])))\n",
     "    \n",
-    "    show_html(p.to_html() + \"<br/><br/><br/>\")\n"
+    "    if SHOW_DEMO_OUTPUT:\n",
+    "        show_html(p.to_html() + \"<br/><br/><br/>\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DeepDeform"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Please extract deepdeform_v1.7z to a directory and provide the target below:\n",
+    "DD_DATA_ROOT = '/outer_root/host_mnt/Volumes/970-evo-raid0/deepdeform_v1/'\n",
+    "\n",
+    "DD_DEMO_SCENES = [\n",
+    "    {\n",
+    "        \"input\": \"train/seq000/color/000000.jpg\",\n",
+    "        \"expected_out\": \"train/seq000/color/000200.jpg\",\n",
+    "        \"flow_gt\": \"train/seq000/optical_flow/blackdog_000000_000200.oflow\",\n",
+    "    },\n",
+    "    \n",
+    "    {\n",
+    "        \"input\": \"train/seq000/color/000000.jpg\",\n",
+    "        \"expected_out\": \"train/seq000/color/001200.jpg\",\n",
+    "        \"flow_gt\": \"train/seq000/optical_flow/blackdog_000000_001200.oflow\",\n",
+    "    },\n",
+    "    \n",
+    "    {\n",
+    "        \"input\": \"train/seq001/color/003400.jpg\",\n",
+    "        \"expected_out\": \"train/seq001/color/003600.jpg\",\n",
+    "        \"flow_gt\": \"train/seq001/optical_flow/lady_003400_003600.oflow\",\n",
+    "    },\n",
+    "    \n",
+    "    {\n",
+    "        \"input\": \"train/seq337/color/000050.jpg\",\n",
+    "        \"expected_out\": \"train/seq337/color/000350.jpg\",\n",
+    "        \"flow_gt\": \"train/seq337/optical_flow/adult_000050_000350.oflow\",\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "def dd_load_flow(path):\n",
+    "    # Based upon https://github.com/AljazBozic/DeepDeform/blob/master/utils.py#L1\n",
+    "    import shutil\n",
+    "    import struct\n",
+    "    \n",
+    "    # Flow is stored row-wise in order [channels, height, width].\n",
+    "    assert os.path.isfile(path)\n",
+    "\n",
+    "    flow_gt = None\n",
+    "    with open(path, 'rb') as fin:\n",
+    "        width = struct.unpack('I', fin.read(4))[0]\n",
+    "        height = struct.unpack('I', fin.read(4))[0]\n",
+    "        channels = struct.unpack('I', fin.read(4))[0]\n",
+    "        n_elems = height * width * channels\n",
+    "\n",
+    "        flow = struct.unpack('f' * n_elems, fin.read(n_elems * 4))\n",
+    "        flow_gt = np.asarray(flow, dtype=np.float32).reshape([channels, height, width])\n",
+    "    \n",
+    "    # Match format used in this analysis\n",
+    "    flow_gt = np.moveaxis(flow_gt, 0, -1) # (h, w, 2)\n",
+    "    invalid_flow = flow_gt == -np.Inf\n",
+    "    flow_gt[invalid_flow] = 0.0\n",
+    "    return flow_gt\n",
+    "\n",
+    "def dd_create_fp(info):\n",
+    "     return OpticalFlowPair(\n",
+    "                dataset=\"DeepDeform Semi-Synthetic Optical Flow\",\n",
+    "                id1=scene['input'],\n",
+    "                img1='file://' + os.path.join(DD_DATA_ROOT, scene['input']),\n",
+    "                id2=scene['expected_out'],\n",
+    "                img2='file://' + os.path.join(DD_DATA_ROOT, scene['expected_out']),\n",
+    "                flow=lambda: dd_load_flow(os.path.join(DD_DATA_ROOT, scene['flow_gt'])))\n",
+    "\n",
+    "import json\n",
+    "DD_ALIGNMENTS = json.load(open(os.path.join(DD_DATA_ROOT, 'train_alignments.json')))\n",
+    "ALL_DD_SCENES = [\n",
+    "    {\n",
+    "        \"input\": ascene['source_color'],\n",
+    "        \"expected_out\": ascene['target_color'],\n",
+    "        \"flow_gt\": ascene['optical_flow'],\n",
+    "    }\n",
+    "    for ascene in DD_ALIGNMENTS\n",
+    "]\n",
+    "\n",
+    "print(\"Found %s DeepDeform scenes\" % len(ALL_DD_SCENES))\n",
+    "if SHOW_DEMO_OUTPUT:\n",
+    "    for scene in DD_DEMO_SCENES:\n",
+    "        p = dd_create_fp(scene)\n",
+    "        show_html(p.to_html())\n",
+    "    \n",
+    "# for i, scene in enumerate(ALL_DD_SCENES):\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "#     img_in = imageio.imread(os.path.join(DD_DATA_ROOT, scene['input']))\n",
+    "#     expected = imageio.imread(os.path.join(DD_DATA_ROOT, scene['expected_out']))\n",
+    "#     flow_gt = dd_load_flow(os.path.join(DD_DATA_ROOT, scene['flow_gt']))\n",
+    "    \n",
+    "#     show_scene(img_in, expected, flow_gt, dataset='deepdeform', exname=str(i))\n",
+    "#     continue\n",
+    "    \n",
+    "#     vis = draw_flow(img_in, flow_gt)\n",
+    "#     imshow(vis)\n",
+    "\n",
+    "#     warped = warp_flow(img_in, flow_gt[:, :, :2])\n",
+    "#     imshow(warped)\n",
+    "    \n",
+    "#     exclude = (flow_gt == np.array([0, 0])).all(axis=-1)\n",
+    "#     warped[exclude] = np.array([0, 0, 0])\n",
+    "#     imshow(warped)\n",
+    "    \n",
+    "#     imshow(expected)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
