--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -14,6 +14,7 @@
     "Some portions of this notebook adapted from:\n",
     " * [Middlebury Flow code by Johannes Oswald](https://github.com/Johswald/flow-code-python/blob/master/readFlowFile.py)\n",
     " * [DeepDeform Demo Code](https://github.com/AljazBozic/DeepDeform)\n",
+    " * [OpticalFlowToolkit by RUOTENG LI](https://github.com/liruoteng/OpticalFlowToolkit)\n",
     " * [OpenCV Samples](https://github.com/opencv/opencv/blob/master/samples/python/opt_flow.py)"
    ]
   },
@@ -34,6 +35,8 @@
    "outputs": [],
    "source": [
     "## Data Model & Utility Code\n",
+    "\n",
+    "!pip3 install pypng\n",
     "\n",
     "import attr\n",
     "import cv2\n",
@@ -240,14 +243,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DeepDeform"
+    "## DeepDeform"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -354,6 +357,142 @@
     "#     imshow(expected)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Kitti Scene Flow Benchmark (2015)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Please unzip `data_scene_flow.zip` and `data_scene_flow_calib.zip` to a directory and provide that target below:\n",
+    "KITTI_SF15_DATA_ROOT = '/outer_root/host_mnt/Volumes/970-evo-raid0/kitti_sceneflow_scratch/'\n",
+    "\n",
+    "# You have to ls flow_occ \n",
+    "KITTI_SF15_DEMO_SCENES = [\n",
+    "    {\n",
+    "        'input': 'training/image_2/000000_10.png',\n",
+    "        'expected_out': 'training/image_2/000000_11.png',\n",
+    "        'flow_gt': 'training/flow_occ/000000_10.png',\n",
+    "    },\n",
+    "    {\n",
+    "        'input': 'training/image_2/000007_10.png',\n",
+    "        'expected_out': 'training/image_2/000007_11.png',\n",
+    "        'flow_gt': 'training/flow_occ/000007_10.png',\n",
+    "    },\n",
+    "    {\n",
+    "        'input': 'training/image_2/000023_10.png',\n",
+    "        'expected_out': 'training/image_2/000023_11.png',\n",
+    "        'flow_gt': 'training/flow_occ/000023_10.png',\n",
+    "    },\n",
+    "    {\n",
+    "        'input': 'training/image_2/000051_10.png',\n",
+    "        'expected_out': 'training/image_2/000051_11.png',\n",
+    "        'flow_gt': 'training/flow_occ/000051_10.png',\n",
+    "    },\n",
+    "    {\n",
+    "        'input': 'training/image_2/000003_10.png',\n",
+    "        'expected_out': 'training/image_2/000003_11.png',\n",
+    "        'flow_gt': 'training/flow_occ/000003_10.png',\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "from oarphpy import util as oputil\n",
+    "KITTI_SF15_ALL_FLOW_OCC = [\n",
+    "    os.path.basename(p)\n",
+    "    for p in oputil.all_files_recursive(\n",
+    "        os.path.join(KITTI_SF15_DATA_ROOT, 'training/flow_occ'), pattern='*.png')\n",
+    "]\n",
+    "    \n",
+    "KITTI_SF15_ALL_SCENES = [\n",
+    "    {\n",
+    "        \"input\": 'training/image_2/%s' % fname,\n",
+    "        \"expected_out\": 'training/image_2/%s' % fname.replace('_10', '_11'),\n",
+    "        \"flow_gt\": 'training/flow_occ/%s' % fname,\n",
+    "    }\n",
+    "    for fname in KITTI_SF15_ALL_FLOW_OCC\n",
+    "]\n",
+    "print(\"Found %s KITTI SceneFlow 2015 scenes\" % len(KITTI_SF15_ALL_SCENES))\n",
+    "\n",
+    "\n",
+    "def kitti_sf15_load_flow_from_png(path):\n",
+    "    # Based upon https://github.com/liruoteng/OpticalFlowToolkit/blob/master/lib/flowlib.py#L559\n",
+    "    import png\n",
+    "    flow_object = png.Reader(filename=path)\n",
+    "    flow_direct = flow_object.asDirect()\n",
+    "    flow_data = list(flow_direct[2])\n",
+    "    w, h = flow_direct[3]['size']\n",
+    "    flow = np.zeros((h, w, 3), dtype=np.float64)\n",
+    "    for i in range(len(flow_data)):\n",
+    "        flow[i, :, 0] = flow_data[i][0::3]\n",
+    "        flow[i, :, 1] = flow_data[i][1::3]\n",
+    "        flow[i, :, 2] = flow_data[i][2::3]\n",
+    "\n",
+    "    invalid_idx = (flow[:, :, 2] == 0)\n",
+    "    flow[:, :, 0:2] = (flow[:, :, 0:2] - 2 ** 15) / 64.0\n",
+    "    flow[invalid_idx, 0] = 0\n",
+    "    flow[invalid_idx, 1] = 0\n",
+    "    return flow[:, :, :2]\n",
+    "\n",
+    "def kitti_sf15_create_fp(info):\n",
+    "     return OpticalFlowPair(\n",
+    "                dataset=\"KITTI Scene Flow 2015\",\n",
+    "                id1=scene['input'],\n",
+    "                img1='file://' + os.path.join(KITTI_SF15_DATA_ROOT, scene['input']),\n",
+    "                id2=scene['expected_out'],\n",
+    "                img2='file://' + os.path.join(KITTI_SF15_DATA_ROOT, scene['expected_out']),\n",
+    "                flow=lambda: kitti_sf15_load_flow_from_png(os.path.join(KITTI_SF15_DATA_ROOT, scene['flow_gt'])))\n",
+    "\n",
+    "if SHOW_DEMO_OUTPUT:\n",
+    "    for scene in KITTI_SF15_DEMO_SCENES:\n",
+    "        p = kitti_sf15_create_fp(scene)\n",
+    "        show_html(p.to_html())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
