--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -25,7 +25,8 @@
    "outputs": [],
    "source": [
     "# parameters\n",
-    "SHOW_DEMO_OUTPUT = True"
+    "SHOW_DEMO_OUTPUT = True\n",
+    "DEMO_FPS = []"
    ]
   },
   {
@@ -52,7 +53,8 @@
     "\n",
     "@attr.s(slots=True, eq=False, weakref_slot=False)\n",
     "class OpticalFlowPair(object):\n",
-    "    \"\"\"A flyweight for a pair of images with an optical flow field\"\"\"\n",
+    "    \"\"\"A flyweight for a pair of images with an optical flow field.\n",
+    "    Supports lazy-loading of large data attributes.\"\"\"\n",
     "    \n",
     "    dataset = attr.ib(type=str, default='')\n",
     "    \"\"\"To which dataset does this pair belong?\"\"\"\n",
@@ -72,10 +74,25 @@
     "    flow = attr.ib(default=None)\n",
     "    \"\"\"A callable or numpy array representing optical flow from img1 -> img2\"\"\"\n",
     "    \n",
+    "    def get_img1(self):\n",
+    "        if isinstance(self.img1, six.string_types):\n",
+    "            self.img1 = imageio.imread(self.img1)\n",
+    "        return self.img1\n",
+    "    \n",
+    "    def get_img2(self):\n",
+    "        if isinstance(self.img2, six.string_types):\n",
+    "            self.img2 = imageio.imread(self.img2)\n",
+    "        return self.img2\n",
+    "    \n",
+    "    def get_flow(self):\n",
+    "        if not isinstance(self.flow, (np.ndarray, np.generic)):\n",
+    "            self.flow = self.flow()\n",
+    "        return self.flow\n",
+    "    \n",
     "    def to_html(self):\n",
-    "        im1 = load_image(self.img1)\n",
-    "        im2 = load_image(self.img2)\n",
-    "        flow = self.flow if isinstance(self.flow, (np.ndarray, np.generic)) else self.flow()\n",
+    "        im1 = self.get_img1()\n",
+    "        im2 = self.get_img2()\n",
+    "        flow = self.get_flow()\n",
     "        fviz = draw_flow(im1, flow)\n",
     "        html = \"\"\"\n",
     "            <table>\n",
@@ -236,7 +253,8 @@
     "            flow=lambda: midd_read_flow(os.path.join(MIDD_DATA_ROOT, scene['flow_gt'])))\n",
     "    \n",
     "    if SHOW_DEMO_OUTPUT:\n",
-    "        show_html(p.to_html() + \"<br/><br/><br/>\")\n"
+    "        show_html(p.to_html() + \"<br/><br/><br/>\")\n",
+    "        DEMO_FPS.append(p)\n"
    ]
   },
   {
@@ -332,6 +350,7 @@
     "    for scene in DD_DEMO_SCENES:\n",
     "        p = dd_create_fp(scene)\n",
     "        show_html(p.to_html())\n",
+    "        DEMO_FPS.append(p)\n",
     "    \n",
     "# for i, scene in enumerate(ALL_DD_SCENES):\n",
     "    \n",
@@ -456,7 +475,162 @@
     "if SHOW_DEMO_OUTPUT:\n",
     "    for scene in KITTI_SF15_DEMO_SCENES:\n",
     "        p = kitti_sf15_create_fp(scene)\n",
-    "        show_html(p.to_html())"
+    "        show_html(p.to_html())\n",
+    "        DEMO_FPS.append(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reconstruction via Optical Flow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "## Reconstruction via Optical Flow\n",
+    "\n",
+    "def warp_flow_backwards(img, flow):\n",
+    "    \"\"\"Given an image, apply the inverse of `flow`\"\"\"\n",
+    "    h, w = flow.shape[:2]\n",
+    "    flow = -flow\n",
+    "    flow[:,:,0] += np.arange(w)\n",
+    "    flow[:,:,1] += np.arange(h)[:,np.newaxis]\n",
+    "    res = cv2.remap(img, flow.astype(np.float32), None, cv2.INTER_LINEAR)\n",
+    "    return res\n",
+    "    \n",
+    "def warp_flow_forwards(img, flow):\n",
+    "    \"\"\"Given an image, apply the given optical flow `flow`.  Returns not only the warped\n",
+    "    image, but a `mask` indicating warped pixels (i.e. there was non-zero flow *into* these pixels ).\n",
+    "    With some help from https://stackoverflow.com/questions/41703210/inverting-a-real-valued-index-grid/46009462#46009462\n",
+    "    \"\"\"\n",
+    "    h, w = img.shape[:2]\n",
+    "    pts = flow.copy()\n",
+    "    pts[:, :, 0] += np.arange(w)\n",
+    "    pts[:, :, 1] += np.arange(h)[:, np.newaxis]\n",
+    "    exclude = (flow[:, :, :2] == np.array([0, 0])).all(axis=-1)\n",
+    "    if exclude.all():\n",
+    "        # No flow anywhere!\n",
+    "        return img.copy(), np.zeros((h, w)).astype(np.bool)\n",
+    "    else:\n",
+    "        inpts = pts[~exclude]\n",
+    "    \n",
+    "    from scipy.interpolate import griddata\n",
+    "    inpts = np.reshape(inpts, [-1, 2])\n",
+    "    grid_y, grid_x = np.mgrid[:h, :w]\n",
+    "    chan_out = []\n",
+    "    for ch in range(img.shape[-1]):\n",
+    "        spts = img[:, :, ch][~exclude].reshape([-1, 1])\n",
+    "        mapped = griddata(inpts, spts, (grid_x, grid_y), method='linear')\n",
+    "        chan_out.append(mapped.astype(img.dtype))\n",
+    "    out = np.stack(chan_out, axis=-1)\n",
+    "    out = out.reshape([h, w, len(chan_out)])\n",
+    "\n",
+    "    mask = np.reshape(inpts, [-1, 2])\n",
+    "    mask = np.rint(mask).astype(np.int)\n",
+    "    mask = mask[np.where((mask[:, 0] >= 0) & (mask[:, 0] < w) & (mask[:, 1] >= 0) & (mask[:, 1] < h))]\n",
+    "    valid_mask = np.zeros((h, w))\n",
+    "    valid_mask[mask[:, 1], mask[:, 0]] = 1\n",
+    "    \n",
+    "    return out, valid_mask.astype(np.bool)\n",
+    "\n",
+    "@attr.s(slots=True, eq=False, weakref_slot=False)\n",
+    "class FlowReconstructedImagePair(object):\n",
+    "    \"\"\"A pair of reconstructed images using an input pair of images and optical\n",
+    "    flow field (i.e. an `OpticalFlowPair` instance).\"\"\"\n",
+    "\n",
+    "    opair = attr.ib(default=OpticalFlowPair())\n",
+    "    \"\"\"The original `OpticalFlowPair` with the source of the data for this reconstruction result.\"\"\"\n",
+    "    \n",
+    "    img2_recon_fwd = attr.ib(default=np.array([]))\n",
+    "    \"\"\"A Numpy image containing the result of FORWARDS-WARPING OpticalFlowPair::img1\n",
+    "    via OpticalFlowPair::flow to reconstruct OpticalFlowPair::img2\"\"\"\n",
+    "\n",
+    "    img2_recon_fwd_valid = attr.ib(default=np.array([]))\n",
+    "    \"\"\"A Numpy boolean mask indicating which pixels of `img2_recon_fwd` were modified via non-zero flow\"\"\"\n",
+    "    \n",
+    "    img1_recon_bkd = attr.ib(default=np.array([]))\n",
+    "    \"\"\"A Numpy image containing the result of BACKWARDS-WARPING OpticalFlowPair::img2\n",
+    "    via OpticalFlowPair::flow to reconstruct OpticalFlowPair::img1\"\"\"\n",
+    "\n",
+    "    img1_recon_bkd_valid = attr.ib(default=np.array([]))\n",
+    "    \"\"\"A Numpy boolean mask indicating which pixels of `img1_recon_bkd` were modified via non-zero flow\"\"\"\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def create_from(cls, oflow_pair: OpticalFlowPair):\n",
+    "        flow = oflow_pair.get_flow()\n",
+    "        \n",
+    "        # Forward Warp\n",
+    "        fwarped, fvalid = warp_flow_forwards(oflow_pair.get_img1(), flow)\n",
+    "\n",
+    "        # Backwards Warp\n",
+    "        exclude = (flow[:, :, :2] == np.array([0, 0])).all(axis=-1)\n",
+    "        bwarped = warp_flow_backwards(oflow_pair.get_img2(), -flow[:, :, :2])\n",
+    "        bvalid = ~exclude\n",
+    "        \n",
+    "        return FlowReconstructedImagePair(\n",
+    "                opair=oflow_pair,\n",
+    "                img2_recon_fwd=fwarped,\n",
+    "                img2_recon_fwd_valid=fvalid,\n",
+    "                img1_recon_bkd=bwarped,\n",
+    "                img1_recon_bkd_valid=bvalid)\n",
+    "        \n",
+    "        vwarped = warped.copy()\n",
+    "        if (~valid_mask).any():\n",
+    "            vwarped[~valid_mask] = im2[~valid_mask]#np.array([255, 0, 0])\n",
+    "        else:\n",
+    "            vwarped = im2.copy()\n",
+    "            print('!!!! no invalids')\n",
+    "        imshow(vwarped)\n",
+    "    \n",
+    "    def to_html(self):\n",
+    "        # We use pixels from the destination image in order to make the reconstruction \n",
+    "        # easier to interpret; we'll fade them in intensity so that they are more\n",
+    "        # conspicuous.        \n",
+    "        FADE_UNTOUCHED_PIXELS = 0.3\n",
+    "        \n",
+    "        viz_fwd = self.img2_recon_fwd.copy().astype(np.float32)\n",
+    "        im2 = self.opair.get_img2()\n",
+    "        if (~self.img2_recon_fwd_valid).any():\n",
+    "            viz_fwd[~self.img2_recon_fwd_valid] = im2[~self.img2_recon_fwd_valid]\n",
+    "            viz_fwd[~self.img2_recon_fwd_valid] *= FADE_UNTOUCHED_PIXELS\n",
+    "        else:\n",
+    "            viz_fwd = im2.copy() * FADE_UNTOUCHED_PIXELS\n",
+    "        \n",
+    "        viz_bkd = self.img1_recon_bkd.copy().astype(np.float32)\n",
+    "        im1 = self.opair.get_img1()\n",
+    "        if (~self.img1_recon_bkd_valid).any():\n",
+    "            viz_bkd[~self.img1_recon_bkd_valid] = im1[~self.img1_recon_bkd_valid]\n",
+    "            viz_bkd[~self.img1_recon_bkd_valid] *= FADE_UNTOUCHED_PIXELS\n",
+    "        else:\n",
+    "            viz_bkd = im1.copy() * FADE_UNTOUCHED_PIXELS\n",
+    "        \n",
+    "        html = \"\"\"\n",
+    "            <table>\n",
+    "            \n",
+    "            <tr><td style=\"text-align:left\"><b>Forwards Warped:</b></td></tr>\n",
+    "            <tr><td><img src=\"{viz_fwd}\" width=\"100%\" /></td></tr>\n",
+    "\n",
+    "            <tr><td style=\"text-align:left\"><b>Backwards Warped:</b></td></tr>\n",
+    "            <tr><td><img src=\"{viz_bkd}\" width=\"100%\" /></td></tr>\n",
+    "\n",
+    "            </table>\n",
+    "        \"\"\".format(\n",
+    "                viz_fwd=img_to_data_uri(viz_fwd.astype(np.uint8)),\n",
+    "                viz_bkd=img_to_data_uri(viz_bkd.astype(np.uint8)))\n",
+    "        return html\n",
+    "\n",
+    "        \n",
+    "if SHOW_DEMO_OUTPUT:\n",
+    "    for p in DEMO_FPS:\n",
+    "        recon = FlowReconstructedImagePair.create_from(p)\n",
+    "        show_html(recon.to_html() + \"</br></br></br>\")\n"
    ]
   },
   {
@@ -506,7 +680,54 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "import sys\n",
+    "sys.path.append('/opt/psegs')\n",
+    "\n",
+    "from psegs.datasets import nuscenes as psnusc\n",
+    "from psegs.spark import Spark\n",
+    "spark = Spark.getOrCreate()\n",
+    "\n",
+    "from oarphpy import plotting as pl\n",
+    "\n",
+    "\n",
+    "from pyspark.sql import Row\n",
+    "df = spark.createDataFrame([\n",
+    "  Row(x=x, mod_11=int(x % 11), square=x*x)\n",
+    "  for x in range(101)\n",
+    "])\n",
+    "\n",
+    "\n",
+    "### Check plotting with custom example plotter\n",
+    "class PlotterWithMicroFacet(pl.HistogramWithExamplesPlotter):\n",
+    "  NUM_BINS = 25\n",
+    "\n",
+    "  def display_bucket(self, sub_pivot, bucket_id, irows):\n",
+    "    rows_str = \"<br />\".join(\n",
+    "        \"x: {x} square: {square} mod_11: {mod_11}\".format(**row.asDict())\n",
+    "        for row in sorted(irows, key=lambda r: r.x))\n",
+    "    TEMPLATE = \"\"\"\n",
+    "      <b>Pivot: {spv} Bucket: {bucket_id} </b> <br/>\n",
+    "      {rows}\n",
+    "      <br/> <br/>\n",
+    "    \"\"\"\n",
+    "    disp = TEMPLATE.format(\n",
+    "              spv=sub_pivot,\n",
+    "              bucket_id=bucket_id,\n",
+    "              rows=rows_str)\n",
+    "    return bucket_id, disp\n",
+    "\n",
+    "plotter = PlotterWithMicroFacet()\n",
+    "fig = plotter.run(df, 'square')\n",
+    "\n",
+    "from bokeh.io import output_notebook\n",
+    "output_notebook()\n",
+    "\n",
+    "from bokeh.plotting import show\n",
+    "show(fig)"
+   ]
   },
   {
    "cell_type": "code",
