--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -43,6 +43,7 @@
     "import cv2\n",
     "import imageio\n",
     "import IPython.display\n",
+    "import math\n",
     "import os\n",
     "import PIL.Image\n",
     "import six\n",
@@ -496,6 +497,9 @@
    "source": [
     "## Reconstruction via Optical Flow\n",
     "\n",
+    "def zero_flow(flow):\n",
+    "    return (flow[:, :, :2] == np.array([0, 0])).all(axis=-1)\n",
+    "\n",
     "def warp_flow_backwards(img, flow):\n",
     "    \"\"\"Given an image, apply the inverse of `flow`\"\"\"\n",
     "    h, w = flow.shape[:2]\n",
@@ -514,7 +518,7 @@
     "    pts = flow.copy()\n",
     "    pts[:, :, 0] += np.arange(w)\n",
     "    pts[:, :, 1] += np.arange(h)[:, np.newaxis]\n",
-    "    exclude = (flow[:, :, :2] == np.array([0, 0])).all(axis=-1)\n",
+    "    exclude = zero_flow(flow)\n",
     "    if exclude.all():\n",
     "        # No flow anywhere!\n",
     "        return img.copy(), np.zeros((h, w)).astype(np.bool)\n",
@@ -570,7 +574,7 @@
     "        fwarped, fvalid = warp_flow_forwards(oflow_pair.get_img1(), flow)\n",
     "\n",
     "        # Backwards Warp\n",
-    "        exclude = (flow[:, :, :2] == np.array([0, 0])).all(axis=-1)\n",
+    "        exclude = zero_flow(flow)\n",
     "        bwarped = warp_flow_backwards(oflow_pair.get_img2(), -flow[:, :, :2])\n",
     "        bvalid = ~exclude\n",
     "        \n",
@@ -628,9 +632,18 @@
     "\n",
     "        \n",
     "if SHOW_DEMO_OUTPUT:\n",
+    "    DEMO_RECONS = []\n",
     "    for p in DEMO_FPS:\n",
     "        recon = FlowReconstructedImagePair.create_from(p)\n",
-    "        show_html(recon.to_html() + \"</br></br></br>\")\n"
+    "        show_html(recon.to_html() + \"</br></br></br>\")\n",
+    "        DEMO_RECONS.append(recon)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis"
    ]
   },
   {
@@ -638,14 +651,179 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Analysis Utils\n",
+    "\n",
+    "def mse(i1, i2, valid):\n",
+    "    return np.mean((i1[valid] - i2[valid]) ** 2)\n",
+    "\n",
+    "def rmse(i1, i2, valid):\n",
+    "    return math.sqrt(mse(i1, i2, valid))\n",
+    "\n",
+    "def psnr(i1, i2, valid):\n",
+    "    return 20 * math.log10(255) - 10 * math.log10(max((mse(i1, i2, valid), 1e-12)))\n",
+    "\n",
+    "def ssim(i1, i2, valid):\n",
+    "    # Some variance out there ...\n",
+    "    # https://github.com/scikit-image/scikit-image/blob/master/skimage/metrics/_structural_similarity.py#L12-L232\n",
+    "    # https://github.com/nianticlabs/monodepth2/blob/13200ab2f29f2f10dec3aa5db29c32a23e29d376/layers.py#L218\n",
+    "    # https://cvnote.ddlee.cn/2019/09/12/psnr-ssim-python\n",
+    "    # We will just use SKImage for now ...\n",
+    "    from skimage.metrics import structural_similarity as ssim\n",
+    "    mssim, S = ssim(i1, i2, win_size=11, multichannel=True, full=True)\n",
+    "    return np.mean(S[valid])\n",
+    "\n",
+    "def to_edge_im(img):\n",
+    "    return np.stack([\n",
+    "        cv2.Laplacian(cv2.cvtColor(img, cv2.COLOR_RGB2GRAY), cv2.CV_32F, ksize=1),\n",
+    "        cv2.Sobel(cv2.cvtColor(img, cv2.COLOR_RGB2GRAY), cv2.CV_32F, 1, 0, ksize=3),\n",
+    "        cv2.Sobel(cv2.cvtColor(img, cv2.COLOR_RGB2GRAY), cv2.CV_32F, 0, 1, ksize=3),\n",
+    "    ], axis=-1)\n",
+    "\n",
+    "def edges_mse(i1, i2, valid):\n",
+    "    return mse(to_edge_im(i1), to_edge_im(i2), valid)\n",
+    "\n",
+    "\n",
+    "def oflow_coverage(valid):\n",
+    "    return valid.sum() / (valid.shape[0] * valid.shape[1])\n",
+    "\n",
+    "def oflow_magnitude_hist(flow, valid, bins=50):\n",
+    "    flow_l2s = np.sqrt( flow[valid][:, 0] ** 2 + flow[valid][:, 1] ** 2 )\n",
+    "    bin_edges = np.histogram_bin_edges(flow_l2s, bins=bins)\n",
+    "    bin_counts = np.histogram(flow_l2s, bins=bin_edges)\n",
+    "    return bin_edges, bin_counts\n",
+    "\n",
+    "\n",
+    "# Analysis Data Model\n",
+    "\n",
+    "class OFlowReconErrors(object):\n",
+    "    \"\"\"Various measures of reconstruction error for a `FlowReconstructedImagePair` instance.\n",
+    "    Encapsulated as two dictionaries of stats for easy interop with Spark SQL.\"\"\"\n",
+    "\n",
+    "    RECONSTRUCTION_ERR_METRICS = {\n",
+    "        'Mean Squared Error (MSE)': mse,\n",
+    "        'Root-MSE': rmse,\n",
+    "        'Peak Signal-to-Noise Ratio (PSNR)': psnr,\n",
+    "        'Structured Similarity (SSIM)': ssim,\n",
+    "        'Edges MSE (non-standard metric)': edges_mse,\n",
+    "    }\n",
+    "    \n",
+    "    def __init__(self, recon_pair: FlowReconstructedImagePair):\n",
+    "        im2 = recon_pair.opair.get_img2()\n",
+    "        img2_recon_fwd = recon_pair.img2_recon_fwd\n",
+    "        img2_recon_fwd_valid = recon_pair.img2_recon_fwd_valid\n",
+    "        self.forward_stats = dict(\n",
+    "            (name, func(im2, img2_recon_fwd, img2_recon_fwd_valid))\n",
+    "            for name, func in self.RECONSTRUCTION_ERR_METRICS.items())\n",
+    "        \n",
+    "        im1 = recon_pair.opair.get_img1()\n",
+    "        img1_recon_fwd = recon_pair.img1_recon_bkd\n",
+    "        img1_recon_fwd_valid = recon_pair.img1_recon_bkd_valid\n",
+    "        self.backward_stats = dict(\n",
+    "            (name, func(im1, img1_recon_fwd, img1_recon_fwd_valid))\n",
+    "\n",
+    "    def to_html(self):\n",
+    "        stat_names = self.RECONSTRUCTION_ERR_METRICS.keys()\n",
+    "\n",
+    "        rows = [\n",
+    "            \"\"\"\n",
+    "            <tr>   <td><b>{name}</b></td>  <td>{fwd}</td>  <td>{bkd}</td>  </tr>\n",
+    "            \"\"\".format(name=name, fwd=self.forward_stats[name], bkd=self.backward_stats[name])\n",
+    "            for name in sorted(stat_names)\n",
+    "        ]\n",
+    "        \n",
+    "        \n",
+    "        html = \"\"\"\n",
+    "            <table>\n",
+    "              <tr>\n",
+    "                  <th></th> <th><b>Forwards Warp</b></th> <th><b>Backwards Warp</b></th>\n",
+    "              </tr>\n",
+    "\n",
+    "              {table_rows}\n",
+    "\n",
+    "            </table>\n",
+    "        \"\"\".format(table_rows=\"\".join(rows))\n",
+    "        \n",
+    "        return html\n",
+    "            \n",
+    "@attr.s(slots=True, eq=False, weakref_slot=False)\n",
+    "class OFlowStats(object):\n",
+    "    \"\"\"Stats on the optical flow of a `OpticalFlowPair` instance\"\"\"\n",
+    "\n",
+    "    opair = attr.ib(default=OpticalFlowPair())\n",
+    "    \"\"\"The original `OpticalFlowPair` with the source of the data for this reconstruction result.\"\"\"\n",
+    "    \n",
+    "    coverage = attr.ib(default=0)\n",
+    "    \"\"\"Fraction of the image with valid flow\"\"\"\n",
+    "    \n",
+    "    magnitude_hist = attr.ib(default=[np.array([]), np.array([])])\n",
+    "    \"\"\"Histogram [bin edges, bin counts] of flow magnitudes\"\"\"\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def create_from(cls, oflow_pair: OpticalFlowPair):\n",
+    "        flow = oflow_pair.get_flow()\n",
+    "        valid = ~zero_flow(flow)\n",
+    "        return OFlowStats(\n",
+    "                 opair=oflow_pair,\n",
+    "                 coverage=oflow_coverage(valid),\n",
+    "                 magnitude_hist=oflow_magnitude_hist(flow, valid))\n",
+    "                 \n",
+    "    def to_html(self):\n",
+    "        import matplotlib.pyplot as plt\n",
+    "        flow_l2s = np.sqrt( flow[bvalid][:, 0] ** 2 + flow[bvalid][:, 1] ** 2 )\n",
+    "        print(flow_l2s.shape)\n",
+    "        fig = plt.figure()\n",
+    "        bin_edges, bin_counts = self.magnitude_hist\n",
+    "        plt.bar(bin_edges, bin_counts)\n",
+    "        plt.title(\"Histogram of Flow Magnitudes\")\n",
+    "        plt.xlabel('Flow Magnitude (pixels)')\n",
+    "        plt.ylabel('Count')\n",
+    "\n",
+    "        hist_img = matplotlib_fig_to_img(fig)\n",
+    "        \n",
+    "        html = \"\"\"\n",
+    "            <table>           \n",
+    "            <tr><td style=\"text-align:left\"><b>Flow Coverage:</b> {coverage} </td></tr>\n",
+    "            <tr><td><img src=\"{flow_hist}\" width=\"100%\" /></td></tr>\n",
+    "            </table>\n",
+    "        \"\"\".format(\n",
+    "                coverage=self.coverage,\n",
+    "                flow_hist=img_to_data_uri(matplotlib_fig_to_img))\n",
+    "        return html\n",
+    "\n",
+    "\n",
+    "# Misc\n",
+    "\n",
+    "def matplotlib_fig_to_img(fig):\n",
+    "    import io\n",
+    "    from PIL import Image\n",
+    "    buf = io.BytesIO()\n",
+    "    plt.savefig(buf, format='png')\n",
+    "    buf.seek(0)\n",
+    "    im = Image.open(buf)\n",
+    "    im.show()\n",
+    "    buf.seek(0)\n",
+    "\n",
+    "    import imageio\n",
+    "    hist_img = imageio.imread(buf)\n",
+    "    buf.close()\n",
+    "    return imageio.imread(hist_img)\n",
+    "\n",
+    "\n",
+    "if SHOW_DEMO_OUTPUT:\n",
+    "    for recon in DEMO_RECONS:\n",
+    "        p = recon.oflow_pair\n",
+    "        errors = OFlowReconError(recon)\n",
+    "        err_html = errors.to_html()  \n",
+    "            \n",
+    "        fstats = OFlowStats.create_from(p)\n",
+    "        stats_html = fstats.to_html()\n",
+    "            \n",
+    "        title = \"<b>{dataset} {id1} -> {id2}</b>\".format(dataset=p.dataset, id1=p.id1, id2=p.id2)\n",
+    "        \n",
+    "        show_html(title + stats_html + err_html + \"</br></br></br>\")\n",
+    "            "
+   ]
   },
   {
    "cell_type": "code",
